Closed Bug 346721 Opened 19 years ago Closed 19 years ago

Parent of bullet accessible incorrect, causing hang in ZoomText docreader

Categories

(Core :: Disability Access APIs, defect)

x86
Windows XP
defect
Not set
critical

Tracking

()

RESOLVED FIXED

People

(Reporter: aaronlev, Assigned: aaronlev)

References

Details

(Keywords: access, fixed1.8.1, hang, Whiteboard: Important fix, please see patch for risk assessment, I and reviewers believe it is correct. Has been tested.)

Attachments

(1 file)

We expose an accessible for list bullets. Unfortunately, the accessible parent for that is not exposed correctly.
Attachment #231470 - Flags: superreview?(neil)
Attachment #231470 - Flags: review?(ginn.chen)
Severity: normal → critical
Keywords: hang
Attachment #231470 - Flags: superreview?(neil) → superreview+
Attachment #231470 - Flags: review?(ginn.chen) → review+
Attachment #231470 - Flags: approval1.8.1?
Whiteboard: Important fix, please see patch for risk assessment, I and reviewers believe it is correct. Has been tested.
Comment on attachment 231470 [details] [diff] [review] Use weak reference to enable GetParent() functionality a=drivers, please land this on the MOZILLA_1_8_BRANCH.
Attachment #231470 - Flags: approval1.8.1? → approval1.8.1+
Is this bullet accessible thing sort of a child node that's not a normal child node? Are there others of that type?
Status: NEW → RESOLVED
Closed: 19 years ago
Keywords: fixed1.8.1
Resolution: --- → FIXED
There are a few other types: 1. :before and :after text -- although those appear not to be exposed at the moment. That may be a regression but it's not so crucial to deal with for branch IMO. 2. image map areas which are exposed as accessible children of the image rather than of the map 3. Outer doc accessibles own inner doc accessibles. For example an accessible for an <iframe> is the parent of the document accessible within that. 4. HTML select accessibles have a particular structure that mirrors what the DOM would look like for the XBL-based version (e.g. XUL). 5. XUL button accessibles may have 1 child button based on the presence of an anonymous dropdown button (used for the back/forward submenu dropdown buttons on the toolbar) I'm not aware of any issues with any of these items except for the fact that I see #1 is no longer exposed.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: