bug 346721. Parent of bullet accessible incorrect. r=pligrim, sr=neil