accessible/src/html/nsHTMLTextAccessible.cpp
@@ -225,6 +225,17 @@ nsHTMLLIAccessible::nsHTMLLIAccessible(nsIDOMNode *aDOMNode, nsIWeakReference* a
   }
 }
 
+NS_IMETHODIMP nsHTMLLIAccessible::Shutdown()
+{
+  if (mBulletAccessible) {
+    // Ensure that weak pointer to this is nulled out
+    mBulletAccessible->Shutdown();
+  }
+  nsresult rv = nsAccessibleWrap::Shutdown();
+  mBulletAccessible = nsnull;
+  return rv;
+}
+
 NS_IMETHODIMP nsHTMLLIAccessible::GetBounds(PRInt32 *x, PRInt32 *y, PRInt32 *width, PRInt32 *height)
 {
   nsresult rv = nsAccessibleWrap::GetBounds(x, y, width, height);
@@ -250,6 +261,7 @@ void nsHTMLLIAccessible::CacheChildren()
 
   if (mAccChildCount == eChildCountUninitialized) {
     SetFirstChild(mBulletAccessible);
+    mBulletAccessible->SetParent(this); // Set weak parent;
     mAccChildCount = 1;
     PRBool allowsAnonChildren = PR_FALSE;
     GetAllowsAnonChildAccessibles(&allowsAnonChildren);
@@ -271,7 +283,7 @@ void nsHTMLLIAccessible::CacheChildren()
 
 nsHTMLListBulletAccessible::nsHTMLListBulletAccessible(nsIDOMNode* aDomNode, 
   nsIWeakReference* aShell, nsIFrame *aFrame, const nsAString& aBulletText): 
-  nsHTMLTextAccessible(aDomNode, aShell, aFrame), mBulletText(aBulletText)
+  nsHTMLTextAccessible(aDomNode, aShell, aFrame), mWeakParent(nsnull), mBulletText(aBulletText)
 {
 }
 
@@ -286,6 +298,7 @@ NS_IMETHODIMP nsHTMLListBulletAccessible::GetUniqueID(void **aUniqueID)
 NS_IMETHODIMP nsHTMLListBulletAccessible::Shutdown()
 {
   mBulletText.Truncate();
+  mWeakParent = nsnull;
   return nsHTMLTextAccessible::Shutdown();
 }
 
